--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "game-4-in-a-row",
   "version": "0.1.0",
   "private": true,
+  "author": "Andrii Vasylytsia",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
@@ -21,8 +22,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
